# whisper-intent-interruption-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: harness-candidates.md
.claude/agents/: context-language-balancer.md  decision-record-advisor.md  experiment-material-collector.md  failure-classifier.md  harness-structure-reviewer.md  result-evidence-checker.md
.claude/rules/: coding.md  experiments.md  workflow.md
.codex/agents/: context-language-balancer.toml  decision-record-advisor.toml  experiment-material-collector.toml  failure-classifier.toml  (+2 more)
api/: index.py
archive/: README.md
backend/: BACKEND_PACKAGES.md  pyproject.toml
context/: README.md
data/: datasets.json  scenario_stats.json  scenarios.json  scenarios_policy_v2_edge.json  scenarios_policy_v3_challenge.json  scenarios_policy_v3_edge.json
data/audio/: README.md  (+1 more)
decisions/: README.md
docs/: README.md  index.md
internal/: README.md  action-label-reference.md  evaluation-and-results-contract.md  product-context.md  project-language-map.md  scenario-worked-example.md
scripts/: generate_audio_fixtures.py
src/: runner.py
temp/: README.md  harness-restructure-context.tmp.md  terminology-consistency-confusion-analysis.tmp.md
tests/: conftest.py  test_api.py  test_audio.py  test_audio_api.py  test_datasets.py  test_evaluation.py  test_pipeline_components.py  test_policies.py  test_runner.py  test_scenarios.py  test_ui_static.py
기획/: MVP-PRD.md  MVP-계획서.md  MVP-방향성-초안.md
(+170 files in other folders)
